@@ -285,6 +285,26 @@ common_layout = {
                 'render_format': 'text',
             },
         },
+        'LanguageSelectorCreation': {
+            'type': 'Select Widget',
+            'data': {
+                'title': 'Language',
+                'fields': ('Language',),
+                'is_required': 0,
+                'label': 'label_language',
+                'label_edit': 'label_language',
+                'description': '',
+                'help': '',
+                'is_i18n': 1,
+                'readonly_layout_modes': (),
+                'hidden_layout_modes': ('edit', 'view'),
+                'hidden_readonly_layout_modes': (),
+                'hidden_empty': 0,
+                'hidden_if_expr': '',
+                'css_class': '',
+                'vocabulary': 'language_voc',
+            },
+        },
     },
     'layout': {
         'style_prefix': 'layout_default_',
@@ -292,6 +312,7 @@ common_layout = {
             [{'widget_id': 'LanguageSelector'}],
             [{'widget_id': 'Title'},],
             [{'widget_id': 'Description'},],
+            [{'widget_id': 'LanguageSelectorCreation'}],
             ],
         },
     }
